# GPRat

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  boilerplate-benchmark.sh  compile_gprat.sh  create_python_package.sh  execute-benchmark.sh  pyproject.toml  vcpkg.json
.github/workflows/: ci.yml
bindings/: CMakeLists.txt  gprat_py.cpp  utils_py.cpp
cmake/: hpx-apex-compat.cmake  install-config.cmake
core/: CMakeLists.txt
core/include/: apex_steps.hpp  apex_utils.hpp  gprat_c.hpp  target.hpp
core/include/gprat/: gprat.hpp  gprat_c.hpp  hyperparameters.hpp  kernels.hpp  performance_counters.hpp  scheduler.hpp  target.hpp  tile_cache.hpp  tile_data.hpp  tiled_dataset.hpp  utils.hpp  utils_c.hpp
core/include/gprat/cpu/: adapter_cblas_fp32.hpp  adapter_cblas_fp64.hpp  adapter_cblas_fp64_actions.hpp  blas_enums.hpp  gp_algorithms_actions.hpp  gp_functions.hpp  gp_optimizer_actions.hpp  gp_uncertainty_actions.hpp  tiled_algorithms.hpp
core/include/gprat/detail/: actions.hpp  config.hpp
core/include/gprat/gpu/: adapter_cublas.cuh  cuda_utils.cuh  gp_algorithms.cuh  gp_functions.cuh
core/include/gprat/scheduler/: cyclic.hpp  sma.hpp
core/include/gpu/cuda/: cuda_utils.cuh
core/include/gpu/sycl/: adapter_onemath.hpp  sycl_gp_algorithms.hpp  sycl_gp_functions.hpp  sycl_gp_optimizer.hpp  sycl_gp_uncertainty.hpp  sycl_kernels.hpp  sycl_tiled_algorithms.hpp  sycl_utils.hpp
core/src/: gprat.cpp  gprat_c.cpp  hyperparameters.cpp  performance_counters.cpp  target.cpp  tile_cache.cpp  tiled_dataset.cpp  utils.cpp  utils_c.cpp
core/src/cpu/: adapter_cblas_fp32.cpp  adapter_cblas_fp64.cpp  adapter_cblas_fp64_actions.cpp  adapter_cblas_impl.hpp  gp_algorithms.cpp  gp_algorithms_actions.cpp  gp_functions.cpp  gp_optimizer_actions.cpp  gp_uncertainty_actions.cpp  tiled_algorithms.cpp
core/src/gpu/: gp_algorithms.cu  gp_functions.cu
core/src/gpu/cuda/: adapter_cublas.cu  cuda_kernels.cu  gp_algorithms.cu  gp_functions.cu  gp_optimizer.cu  gp_uncertainty.cu  tiled_algorithms.cu
core/src/gpu/sycl/: adapter_onemath.cpp  sycl_gp_algorithms.cpp  sycl_gp_functions.cpp  sycl_gp_optimizer.cpp  sycl_gp_uncertainty.cpp  sycl_tiled_algorithms.cpp
data/data_1024/: output.json
data/data_19/: output.json
examples/distributed/: CMakeLists.txt
examples/distributed/src/: distributed_cholesky.hpp  distributed_tile.cpp  distributed_tile.hpp  main.cpp
examples/gpflow_reference/: config.json  config_intel.json  execute.py  run_gpflow.sh  utils.py
examples/gpflow_reference/requirements/: requirements_gpflow_amd.txt  requirements_gpflow_cpu.txt  requirements_gpflow_intel.txt  requirements_gpflow_nvidia.txt
examples/gprat_cpp/: CMakeLists.txt  config.json  run_gprat_cpp.sh  run_gprat_spack.sh
examples/gprat_cpp/src/: execute.cpp
examples/gprat_distributed/: CMakeLists.txt  run_gprat_distributed.sh
examples/gprat_distributed/src/: main.cpp
examples/gprat_python/: config.json  execute.py  run_gprat_python.sh
examples/gpytorch_reference/: config.json  execute.py  requirements_gpytorch_amd.txt  run_gpytorch.sh  utils.py
examples/gpytorch_reference/requirements/: requirements_gpytorch_amd.txt  requirements_gpytorch_cpu.txt  requirements_gpytorch_intel.txt  requirements_gpytorch_nvidia.txt
spack-repo/: setup_spack.sh
spack-repo/environments/: setup_gprat_cpu_gcc.sh  setup_gprat_gpu_clang.sh  spack_cpu_gcc.yaml  spack_cpu_gcc_arm.yaml
test/: CMakeLists.txt
test/src/: output_correctness.cpp  test_data.hpp  unit_tests.cpp
